fix overflow for smaller devices

--- a/app/styles/components/hero/carousel.css
+++ b/app/styles/components/hero/carousel.css
@@ -32,11 +32,11 @@
   }
 
   .carousel-nav-link {
-    @apply w-12 h-3 rounded-full bg-gray-200 focus:outline-white border hover:bg-gray-300 duration-500
+    @apply w-10 sm:w-12 h-3 rounded-full bg-gray-200 focus:outline-white border hover:bg-gray-300 duration-500
   }
 
   .carousel-nav-link--active {
-    @apply w-36 bg-gray-50 duration-500
+    @apply w-28 sm:w-36 bg-gray-50 duration-500
   }
 
   .carousel-progress{
